package practica2;

// ENUMERADO DE DIRECCIONES 
public enum DIRECCIONES {
    NORTE,
    NORESTE,
    ESTE,
    SURESTE,
    SUR,
    SUROESTE,
    OESTE,
    NOROESTE
}
